crates/trunk-ir/src/transforms/snapshots/trunk_ir__transforms__canonicalize__tests__int_const_fold_addi.snap
---
source: crates/trunk-ir/src/transforms/canonicalize.rs
expression: "print_module(&ctx, module.op())"
---
core.module @test {
  func.func @f() -> core.i32 {
      %0 = arith.const {value = 2} : core.i32
      %1 = arith.const {value = 3} : core.i32
      %2 = arith.const {value = 5} : core.i32
      func.return %2
  }
}
