crates/trunk-ir/src/transforms/snapshots/trunk_ir__transforms__canonicalize__tests__int_const_fold_wraps_at_i32_width.snap
---
source: crates/trunk-ir/src/transforms/canonicalize.rs
expression: "print_module(&ctx, module.op())"
---
core.module @test {
  func.func @f() -> core.i32 {
      %0 = arith.const {value = 2147483647} : core.i32
      %1 = arith.const {value = 1} : core.i32
      %2 = arith.const {value = -2147483648} : core.i32
      func.return %2
  }
}
