crates/trunk-ir/src/transforms/snapshots/trunk_ir__transforms__canonicalize__tests__int_const_fold_wraps_at_i64_width.snap
---
source: crates/trunk-ir/src/transforms/canonicalize.rs
expression: "print_module(&ctx, module.op())"
---
core.module @test {
  func.func @f() -> core.i64 {
      %0 = arith.const {value = 9223372036854775807} : core.i64
      %1 = arith.const {value = 1} : core.i64
      %2 = arith.const {value = -9223372036854775808} : core.i64
      func.return %2
  }
}
