crates/trunk-ir/src/transforms/snapshots/trunk_ir__transforms__canonicalize__tests__int_const_fold_wraps_on_overflow.snap
---
source: crates/trunk-ir/src/transforms/canonicalize.rs
expression: "print_module(&ctx, module.op())"
---
core.module @test {
  func.func @f() -> core.i32 {
      %0 = arith.const {value = 170141183460469231731687303715884105727} : core.i32
      %1 = arith.const {value = 1} : core.i32
      %2 = arith.const {value = -170141183460469231731687303715884105728} : core.i32
      func.return %2
  }
}
