crates/trunk-ir/src/transforms/snapshots/trunk_ir__transforms__canonicalize__tests__unrealized_cast_identity_drops_same_type_cast.snap
---
source: crates/trunk-ir/src/transforms/canonicalize.rs
expression: "print_module(&ctx, module.op())"
---
core.module @test {
  func.func @f(%0: core.i32) -> core.i32 {
      func.return %0
  }
}
